--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="AppSperia , Landing page, Template, App, Mobile, Android, iOS" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- SITE TITLE -->
-    <title>Vote Africa - Educating, Motivating & Empowering the youth to own the electoral process!!</title>
+    <title>Justice Today | Help us fight crime today!</title>
 
     <!-- FAVICON -->
     <link rel="icon" href="images/favicon.ico">
@@ -95,9 +95,8 @@
             <div class="wrap">
                 <div class="box">
                     <!-- SECTION HOME CONTENT -->
-                    <h1>Civic Education for the <strong>African Electorate</strong></h1>
-                    <p>Vote Africa looks to educate, motivate and empower the electorate to fully own
-                    the electoral process and hold elected officials accountable.</p> <a href="https://play.google.com/store/apps/details?id=io.initsolutions.erc" target="_blank" class="simple-button"><span class="icon flaticon-download7"></span>Download App</a> </div>
+                    <h1>Legal Education for<strong>African Citizens</strong></h1>
+                    <p>Justice Today is a mobile application that protects citizens from crime and utilizes artificial intelligence to educate citizens on the steps to take when victimized.</p> <a href="https://play.google.com/store/apps/details?id=io.initsolutions.erc" target="_blank" class="simple-button"><span class="icon flaticon-download7"></span>Download App</a> </div>
                     <!-- END SECTION HOME CONTENT -->
             </div>
         </div>
