--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="box">
                     <!-- SECTION HOME CONTENT -->
                     <h1>Legal Education for <strong>African Citizens</strong></h1>
-                    <p>Justice Today is a mobile application that protects citizens from crime and utilizes artificial intelligence to educate citizens on the steps to take when victimized.</p> <a href="https://play.google.com/store/apps/details?id=io.initsolutions.erc" target="_blank" class="simple-button"><span class="icon flaticon-download7"></span>Download App</a> </div>
+                    <p>Justice Today is a mobile application that protects citizens from crime and utilizes artificial intelligence to educate citizens on the steps to take when victimized. The platform also allows citizens to report crime in real time</p> <a href="https://play.google.com/store/apps/details?id=io.initsolutions.erc" target="_blank" class="simple-button"><span class="icon flaticon-download7"></span>Download App</a> </div>
                     <!-- END SECTION HOME CONTENT -->
             </div>
         </div>
@@ -107,17 +107,16 @@
             <div class="wrap">
                 <div class="box">
                     <!-- SECTION FEATURES CONTENT -->
-                    <h2><strong>Civic</strong> Education</h2>
-                    <p>Vote Africa provides the electorate will all relevant educational material which is accessible offline and aims to reduce the rate of invalid votes and motivate electorate to participate.</p>
+                    <h2><strong>Legal</strong> Education</h2>
+                    <p>Justice Today provides legal information and resources to educate citizens on crime based issues and measures to take when victimized.</p>
                     <ul class="features">
-                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Voter Guide<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Offline Virtual Library, Info Guide, Useful Links & Resources</span></span></span></a> </li>
-                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Polling Stations<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Get directions to the nearest polling station in your area</span></span></span></a> </li>
-                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Open Data<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Statistics on past African elections for research and analysis</span></span></span></a> </li>
+                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> The Constitution<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Access to the country's constitution.</span></span></span></a> </li>
+                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Useful contacts<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Find relevant contacts when seeking crime related help.</span></span></span></a> </li>
+                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Victim Guide<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Tips and guides showing steps to take when victimized.</span></span></span></a> </li>
                     </ul>
                     <ul class="features">
-                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Representing Candidates<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Get to know all the representing candidates participating during the elections.</span></span></span></a> </li>
-                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Political Parties<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Get all relevant information about parties running for the elections</span></span></span></a> </li>
-                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Live Results<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Receive election results in real time.</span></span></span></a> </li>
+                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Types of Crime<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Get educated on the various types of crime.</span></span></span></a> </li>
+                        <li><a class="tooltip" href="#"><span class="icon flaticon-lightbulb"></span> Crime Heat Map<span class="tooltip-content"><span class="tooltip-text"><span class="tooltip-inner"><span class="icon flaticon-lightbulb"></span>Helps residents see and understand where crime is happening in their neighbourhoods.</span></span></span></a> 
                     </ul>
                     <!-- END SECTION FEATURES CONTENT -->
                 </div>
@@ -129,55 +128,9 @@
         <div class="section" id="section2">
             <div class="wrap">
                 <div class="box">
-                    <!-- SECTION ABOUT CONTENT -->
-                    <h2>Our <strong>Motive</strong></h2>
-                    <div class="tabs tabs-style-linemove">
-                        <!-- TABS LINKS -->
-                        <nav>
-                            <ul>
-                                <li><a href="#section-linemove-1"><span class="icon flaticon-lightbulb"></span><span> Learn</span></a>
-                                </li>
-                                <li><a href="#section-linemove-2"><span class="icon flaticon-lightbulb"></span><span> Participate</span></a>
-                                </li>
-                                <li><a href="#section-linemove-3"><span class="icon flaticon-lightbulb"></span><span> Connect</span></a>
-                                </li>
-                                <li><a href="#section-linemove-4"><span class="icon flaticon-lightbulb"></span><span> Inspire</span></a>
-                                </li>
-                            </ul>
-                        </nav>
-                        <!-- END TABS LINKS -->
-
-                        <!-- TABS CONTENT -->
-                        <div class="content-wrap">
-                           
-                            <!-- TAB 1 -->
-                            <section id="section-linemove-1">
-                                <!--<h4><span class="icon flaticon-lightbulb"></span> Brief description on Learn</h4>-->
-                                <p>Vote Africa looks to teach the electorate about relevant topics in elections and encourages the participation of the electorate in the electoral process. Vote Africa also allows the electorate to create dialogue with other similar minded people in their region</p>
-                            </section>
-
-                             <!-- TAB 2 -->
-                            <section id="section-linemove-2">
-                                <!--<h4><span class="icon flaticon-lightbulb"></span> Brief description on Participate</h4>-->
-                                <p>Vote Africa looks to teach the electorate about relevant topics in elections and encourages the participation of the electorate in the electoral process. Vote Africa also allows the electorate to create dialogue with other similar minded people in their region</p>
-                            </section>
-
-                            <!-- TAB 3 -->
-                            <section id="section-linemove-3">
-                                <!--<h4><span class="icon flaticon-lightbulb"></span> Brief description on Connect</h4>-->
-                                <p>Vote Africa looks to teach the electorate about relevant topics in elections and encourages the participation of the electorate in the electoral process. Vote Africa also allows the electorate to create dialogue with other similar minded people in their region</p>
-                            </section>
-                            
-                            <!-- TAB 4 -->
-                            <section id="section-linemove-4">
-                                <!--<h4><span class="icon flaticon-lightbulb"></span> Brief description on Inspire</h4>-->
-                                <p>Vote Africa looks to teach the electorate about relevant topics in elections and encourages the participation of the electorate in the electoral process. Vote Africa also allows the electorate to create dialogue with other similar minded people in their region</p>
-                            </section>
-                        </div>
-                         <!-- END TABS CONTENT -->                            
-
-                    <!-- END SECTION ABOUT -->
-                    </div>
+                    <!-- SECTION FEATURES CONTENT -->
+                    <h2>Artificial <strong>Intelligence</strong></h2>
+                    <p>Through the integration of a ChatBot, Justice Today utilises artificial intelligence to educacte citizens on crime related issues and enabling them  to ask questions in real time. The chatbot allows users to ask questions and get answers instantly.</p>                  
                 </div>
             </div>
         </div>
@@ -189,7 +142,7 @@
             <div class="wrap">
                 <div class="box">
                     <!-- SECTION FEATURES CONTENT -->
-                    <h2>Artificial <strong>Intelligence</strong></h2>
+                    <h2>Find a <strong>Lawyer</strong></h2>
                     <p>Through the integration of a ChatBot, Vote Africa utilises artificial intelligence enabling users to ask election related questions in real time.</p>
                     <p>Your mobile phone now allows you to participate as an elections observer during elections. Send reports, capture images and contribute to working towards free and fair elections.</p>                  
                 </div>
