--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                 <div class="box">
                     <!-- SECTION FEATURES CONTENT -->
                     <h2>Find a <strong>Lawyer</strong></h2>
-                    <p>Through the integration of a ChatBot, Vote Africa utilises artificial intelligence enabling users to ask election related questions in real time.</p>
-                    <p>Your mobile phone now allows you to participate as an elections observer during elections. Send reports, capture images and contribute to working towards free and fair elections.</p>                  
+                    <p> Easy access to lawyers and law firms in their relevent area of practise. Users are able to contact laywers directly through their email, mobile and website.</p>
+                    <p>.</p>                  
                 </div>
             </div>
         </div>
