--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="AppSperia - App Landing Page" />
     <meta name="keywords" content="AppSperia , Landing page, Template, App, Mobile, Android, iOS" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="google-site-verification" content="K4gC78-G54nlG7fKYPcZIXsnuY7I6h_9ieUXfvpH41I" />
     <!-- SITE TITLE -->
     <title>Justice Today | Help us fight crime today!</title>
 
